--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -15,75 +15,33 @@
     margin-bottom: 40px;
 }
 
-.articles-list__sort-button-swiper {
-}
-.articles-list__sort-buttons-swiper-wrapper {
-}
+.articles-list__sort-button-swiper {}
+
+.articles-list__sort-buttons-swiper-wrapper {}
+
 .articles-list__sort-buttons-swiper-slide {
     width: auto;
 }
+
 .articles-list__button {
     display: inline-block;
     color: #303030;
     border-color: #BACC92;
 }
-.articles-list__button:hover, .articles-list__button.active {
-    border-color: #4E6932!important;
-    color: #FFF!important;
-    background-color: #4E6932!important;
+
+.articles-list__button:hover,
+.articles-list__button.active {
+    border-color: #4E6932 !important;
+    color: #FFF !important;
+    background-color: #4E6932 !important;
 }
+
 .articles-list__items {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: min-content;
     gap: 24px;
     margin-bottom: 56px;
-}
-
-.articles-list__item-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-.articles-list__item-top {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 400px;
-    gap: 24px;
-}
-
-.articles-list__item-top .articles-list__item.--big-item {
-    max-height: 400px;
-    grid-column: span 2;
-}
-
-.articles-list__item-top .articles-list__item.--small-item {
-    max-height: 400px;
-}
-
-.articles-list__item-bottom {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 258px 258px;
-    gap: 24px;
-}
-
-.articles-list__item.--bottom-item.--big-item {
-    max-height: 540px;
-    grid-column: 2;
-    grid-row: span 2;
-}
-
-.articles-list__item.--bottom-item.--small-item {
-    max-height: 258px;
-    grid-column: 1;
-}
-
-.articles-list__item.--bottom-item.--small-item:nth-child(2) {
-    grid-row: 1;
-}
-
-.articles-list__item.--bottom-item.--small-item:nth-child(3) {
-    grid-row: 2;
 }
 
 .articles-list__item {
@@ -91,22 +49,67 @@
     overflow: hidden;
     position: relative;
     cursor: pointer;
+    background-color: #f6f6f6;
+    height: auto;
 }
+
+/* Первая строка (элементы 1-3) */
+.articles-list__item:nth-child(6n + 1) {
+    /* большой элемент (628x400) */
+    grid-column: 1 / span 6;
+    grid-row: calc(3 * var(--block-index) + 1);
+    min-height: 400px;
+}
+
+.articles-list__item:nth-child(6n + 2),
+.articles-list__item:nth-child(6n + 3) {
+    /* два маленьких (222x320) */
+    grid-column: span 3;
+    grid-row: calc(3 * var(--block-index) + 1);
+    min-height: 400px;
+}
+
+/* Вторая строка (элементы 4-6) */
+.articles-list__item:nth-child(6n + 4) {
+    /* узкий слева (верхний) */
+    grid-column: 1 / span 6;
+    grid-row: calc(3 * var(--block-index) + 2);
+    min-height: 258px;
+}
+
+.articles-list__item:nth-child(6n + 5) {
+    /* узкий слева (нижний) */
+    grid-column: 1 / span 6;
+    grid-row: calc(3 * var(--block-index) + 3);
+    min-height: 258px;
+}
+
+.articles-list__item:nth-child(6n + 6) {
+    /* большой справа (610x540) */
+    grid-column: 7 / span 6;
+    grid-row: calc(3 * var(--block-index) + 2) / span 2;
+    min-height: 540px;
+}
+
 .article-list__item-inner {
     display: block;
     height: 100%;
 }
+
 .article-list__item-inner:hover {
     color: #303030;
 }
+
 .articles-list__item:hover {
     filter: brightness(0.9);
 }
+
 .articles-list__item:hover .my-button {
-    border-color: #4E6932!important;
-    color: #FFF!important;
-    background-color: #4E6932!important;
+    border-color: #4E6932 !important;
+    color: #FFF !important;
+    background-color: #4E6932 !important;
 }
+
 .articles-list__item-img {
     width: 100%;
     height: 100%;
@@ -115,6 +118,7 @@
     top: 0;
     left: 0;
 }
+
 .articles-list__item-content {
     display: flex;
     flex-direction: column;
@@ -122,6 +126,7 @@
     height: 100%;
     position: relative;
 }
+
 .articles-list__item-title {
     padding: 12px 20px;
     background-color: #F6F6F6;
@@ -134,6 +139,7 @@
     right: 40px;
     width: fit-content;
 }
+
 .articles-list__item-text-content {
     display: none;
     flex-direction: column;
@@ -142,47 +148,59 @@
     z-index: 5;
     height: 100%;
 }
+
 .articles-list__item-date {
     font-size: 14px;
     line-height: 130%;
     color: #4E6932;
     margin-bottom: 16px;
 }
+
 .articles-list__item-texts {
     display: flex;
     flex-direction: column;
+    margin-bottom: 40px;
 }
+
 .articles-list__item-text-title {
     font-size: 24px;
     line-height: 130%;
     margin-bottom: 40px;
 }
+
 .articles-list__item-text {
     font-size: 16px;
     line-height: 130%;
 }
+
 .articles-list__item-link {
     display: inline-flex;
     margin-top: auto;
 }
+
 .articles-list__item-link:hover {
-    border-color: #4E6932!important;
-    color: #FFF!important;
-    background-color: #4E6932!important;
+    border-color: #4E6932 !important;
+    color: #FFF !important;
+    background-color: #4E6932 !important;
 }
+
 .articles-list__item.--text-news {
     background-color: #C9DAA4;
     position: relative;
 }
+
 .articles-list__item.--text-news:hover {
     filter: brightness(1);
 }
+
 .articles-list__item.--text-news .articles-list__item-title {
     display: none;
 }
+
 .articles-list__item.--text-news .articles-list__item-img {
     display: none;
 }
+
 .articles-list__item.--text-news::before {
     content: '';
     display: inline-block;
@@ -195,6 +213,7 @@
     z-index: 1;
     opacity: .1;
 }
+
 .articles-list__item.--text-news .articles-list__item-text-content {
     display: flex;
 }
@@ -202,25 +221,32 @@
 .articles-list__item.--text-news_withImage {
     position: relative;
 }
+
 .articles-list__item.--text-news_withImage:hover {
     filter: brightness(1);
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-title {
     display: none;
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-img {
     filter: brightness(0.6);
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-text-content {
     display: flex;
     color: #FFF;
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-text {
     display: none;
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-date {
     color: #FFF;
 }
+
 .articles-list__item.--text-news_withImage .articles-list__item-link {
     border-color: #FFF;
     color: #FFF;
@@ -230,55 +256,72 @@
     .articles-list {
         padding-top: 80px;
     }
-    
+
     .articles-list__container {
         padding-top: 0px;
     }
+
     .articles-list__sort-button-swiper {
         overflow: visible;
     }
+
     .articles-list__items {
         gap: 20px;
     }
-    .articles-list__item-wrapper {
-        gap: 20px;
-    }
-    .articles-list__item-top {
-        gap: 20px;
-    }
-    .articles-list__item-bottom {
-        gap: 20px;
-    }
 }
+
 @media (max-width: 1281px) {
     .articles-list {
         padding-top: 70px;
     }
-    .articles-list__item-bottom {
-        grid-template-columns: 0.8fr 1fr;
-        grid-template-rows: 230px 230px;
-    }
-    .articles-list__item-top {
-        grid-template-columns: 0.5fr 1fr 1fr 1fr;
-        grid-template-rows: 380px;
-    }
+
     .articles-list__button {
         font-size: 14px;
         line-height: 130%;
         padding: 15px 22px;
     }
+
+    .articles-list__items {
+        margin-bottom: 48px;
+    }
+
+    .articles-list__item:nth-child(6n + 1) {
+        /* большой элемент (628x400) */
+        grid-column: 1 / span 4;
+    }
+
+    .articles-list__item:nth-child(6n + 2),
+    .articles-list__item:nth-child(6n + 3) {
+        /* два маленьких (222x320) */
+        grid-column: span 4;
+    }
+
+    /* Вторая строка (элементы 4-6) */
+    .articles-list__item:nth-child(6n + 4) {
+        /* узкий слева (верхний) */
+        grid-column: 1 / span 4;
+    }
+
+    .articles-list__item:nth-child(6n + 5) {
+        /* узкий слева (нижний) */
+        grid-column: 1 / span 4;
+    }
+
+    .articles-list__item:nth-child(6n + 6) {
+        /* большой справа (610x540) */
+        grid-column: 5 / span 8;
+    }
+
     .articles-list__item-content {
         padding: 30px;
     }
+
     .articles-list__item-title {
         padding: 12px 20px;
         font-size: 14px;
         bottom: 30px;
         left: 30px;
         right: 30px;
-    }
-    .articles-list__items {
-        margin-bottom: 48px;
     }
 }
 
@@ -286,27 +329,54 @@
     .articles-list {
         padding-top: 65px;
     }
+
     .articles-list__sort-buttons {
         margin-bottom: 45px;
     }
+
     .articles-list__items {
         gap: 18px;
-    }
-    .articles-list__item-wrapper {
-        gap: 18px;
-    }
-    .articles-list__item-bottom {
-        grid-template-rows: 210px 210px;
-        gap: 18px;
-    }
-    .articles-list__item-top {
+        margin-bottom: 41px;
         grid-template-columns: 1fr;
-        grid-template-rows: 300px 350px;
-        gap: 18px;
     }
+
+    .articles-list__item {
+        grid-column: 1 !important;
+        grid-row: auto !important;
+    }
+
+    /* Первая строка (элементы 1-3) */
+    .articles-list__item:nth-child(6n + 1) {
+        /* большой элемент (628x400) */
+        min-height: 480px;
+    }
+
+    .articles-list__item:nth-child(6n + 2),
+    .articles-list__item:nth-child(6n + 3) {
+        /* два маленьких (222x320) */
+        min-height: 360px;
+    }
+
+    /* Вторая строка (элементы 4-6) */
+    .articles-list__item:nth-child(6n + 4) {
+        /* узкий слева (верхний) */
+        min-height: 270px;
+    }
+
+    .articles-list__item:nth-child(6n + 5) {
+        /* узкий слева (нижний) */
+        min-height: 270px;
+    }
+
+    .articles-list__item:nth-child(6n + 6) {
+        /* большой справа (610x540) */
+        min-height: 460px;
+    }
+
     .articles-list__item-content {
         padding: 20px;
     }
+
     .articles-list__item-title {
         padding: 12px 20px;
         font-size: 12px;
@@ -314,79 +384,67 @@
         left: 20px;
         right: 20px;
     }
-    .articles-list__items {
-        margin-bottom: 41px;
-    }
 }
 
 @media (max-width: 768px) {
     .articles-list {
         padding-top: 60px;
     }
+
     .articles-list__sort-buttons {
         margin-bottom: 50px;
     }
+
     .articles-list__button {
         font-size: 14px;
         line-height: 130%;
         padding: 15px 22px;
     }
+
     .articles-list__items {
-        gap: 20px;
-    }
-    .articles-list__item-wrapper {
-        gap: 20px;
-    }
-    .articles-list__item-bottom {
         grid-template-columns: 1fr;
-        grid-template-rows: 270px 270px 400px;
         gap: 20px;
+        margin-bottom: 35px;
     }
-    .articles-list__item.--bottom-item {
-        max-height: none;
+
+    /* Первая строка (элементы 1-3) */
+    .articles-list__item:nth-child(6n + 1) {
+        /* большой элемент (628x400) */
+        min-height: 540px;
     }
-    .articles-list__item.--bottom-item.--big-item {
-        grid-row: 1;
+
+    .articles-list__item:nth-child(6n + 2),
+    .articles-list__item:nth-child(6n + 3) {
+        /* два маленьких (222x320) */
+        min-height: 340px;
     }
-    .articles-list__item.--bottom-item.--small-item {
-        max-height: none;
+
+    /* Вторая строка (элементы 4-6) */
+    .articles-list__item:nth-child(6n + 4) {
+        /* узкий слева (верхний) */
+        min-height: 270px;
     }
-    .articles-list__item.--bottom-item.--big-item {
-        grid-column: 1;
-        grid-row: 3;
+
+    .articles-list__item:nth-child(6n + 5) {
+        /* узкий слева (нижний) */
+        min-height: 270px;
     }
-    .articles-list__item.--bottom-item.--small-item:nth-child(2) {
-        grid-row: 1;
+
+    .articles-list__item:nth-child(6n + 6) {
+        /* большой справа (610x540) */
+        min-height: 400px;
     }
-    .articles-list__item.--bottom-item.--small-item:nth-child(3) {
-        grid-row: 2;
-    }
-    .articles-list__item-top {
-        grid-template-columns: 1fr;
-        grid-template-rows: 540px 400px 400px;
-        gap: 20px;
-    }
-    .articles-list__item-top .articles-list__item.--big-item {
-        max-height: 400px;
-        grid-column: 1;
-        max-height: none;
-    }
+
     .articles-list__item-content {
         padding: 30px;
     }
+
     .articles-list__item-title {
         padding: 12px 20px;
         font-size: 14px;
         bottom: 30px;
         left: 30px;
         right: 30px;
-    }
-    .articles-list__item.--video-poster::before {
-        height: 42px;
-        width: 42px;
-    }
-    .articles-list__items {
-        margin-bottom: 35px;
     }
 }
 
@@ -395,24 +453,30 @@
         margin-bottom: 55px;
     }
 }
+
 @media (max-width: 571px) {
     .articles-list__sort-buttons {
         margin-bottom: 60px;
     }
+
     .articles-list__button {
         font-size: 12px;
         line-height: 100%;
         padding: 14px 19px;
     }
+
     .articles-list__items {
         gap: 22px;
     }
+
     .articles-list__item-wrapper {
         gap: 22px;
     }
+
     .articles-list__item-top {
         gap: 22px;
     }
+
     .articles-list__item-bottom {
         gap: 22px;
     }
@@ -422,15 +486,19 @@
     .articles-list__button {
         padding: 12px 19px;
     }
+
     .articles-list__items {
         gap: 24px;
     }
+
     .articles-list__item-wrapper {
         gap: 24px;
     }
+
     .articles-list__item-top {
         gap: 24px;
     }
+
     .articles-list__item-bottom {
         gap: 24px;
     }
