--- a/styles/pages/news.css
+++ b/styles/pages/news.css
@@ -48,7 +48,7 @@
     overflow: hidden;
     position: relative;
     cursor: pointer;
-    background-color: #f6f6f6;
+    background-color: #CFCFCF;
 }
 
 /* Цикл из 9 элементов (3 строки) */
