--- a/styles/components/button-up.css
+++ b/styles/components/button-up.css
@@ -1,15 +1,10 @@
-.button-up__container {
-    width: 100%;
-    position: relative;
-}
 .button-up {
     height: 52px;
     width: 52px;
     border-radius: 50%;
     background-color: #FFF9F0;
     display: flex;
-    justify-content: center;    
-    position: fixed;
+    justify-content: center;
     bottom: 20px;
     right: 20px;
     cursor: pointer;
@@ -18,48 +13,57 @@
     transition: opacity 0.3s ease, visibility 0.3s ease;
     z-index: 1049;
 }
+
 .button-up.visible {
     opacity: 1;
     visibility: visible;
 }
+
 .button-up__img {
     max-width: 52px;
     max-height: 52px;
 }
+
 .button-up__img svg {
     width: 100%;
     height: 100%;
 }
 
 @media (max-width: 1361px) {
-
+    .button-up {
+        margin-right: 40px;
+    }
 }
+
 @media (max-width: 1281px) {
     .button-up {
         height: 50px;
         width: 50px;
     }
+
     .button-up__img {
         max-width: 50px;
         max-height: 50px;
     }
 }
-@media (max-width: 992px) {
 
-}
+@media (max-width: 992px) {}
+
 @media (max-width: 769px) {
     .button-up {
         height: 47px;
         width: 47px;
+        margin-right: 30px;
     }
+
     .button-up__img {
         max-width: 47px;
         max-height: 47px;
     }
 }
-@media (max-width: 651px) {
 
-}
+@media (max-width: 651px) {}
+
 @media (max-width: 551px) {
     .button-up {
         height: 45px;
@@ -67,11 +71,11 @@
         bottom: 24px;
         right: 31px;
     }
+
     .button-up__img {
         max-width: 45px;
         max-height: 45px;
     }
 }
-@media (max-width: 431px) {
 
-}
+@media (max-width: 431px) {}
