--- a/styles/components/sections/hero-section.css
+++ b/styles/components/sections/hero-section.css
@@ -169,6 +169,7 @@
     overflow: hidden;
     display: flex;
     align-items: center;
+    background-color: #CFCFCF;
 }
 .hero-section__desc-img {
     width: 100%;
@@ -190,6 +191,7 @@
     height: 540px;
     width: 100%;
     overflow: hidden;
+    background-color: #CFCFCF;
 }
 .hero-section__img {
     width: 100%;
