--- a/styles/components/sections/staff-section.css
+++ b/styles/components/sections/staff-section.css
@@ -31,9 +31,9 @@
     margin-bottom: 24px;
     border-radius: 24px;
     overflow: hidden;
-    background-color: #FCFCFC;
     height: 320px;
     width: 302px;
+    background-color: #CFCFCF;
 }
 .staff__slide-img {
     width: 100%;
@@ -143,7 +143,6 @@
     }
     .staff__slide-img-wrap {
         margin-bottom: 25px;
-        background-color: #F6F6F6;
     }
     .staff__slide-title {
         font-size: 18px;
