--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -13,6 +13,7 @@
     height: 600px;
     overflow: hidden;
     border-radius: 24px;
+    background-color: #CFCFCF;
 }
 .about-info__video-poster {
     width: 100%;
@@ -214,6 +215,7 @@
     height: 540px;
     border-radius: 24px;
     overflow: hidden;
+    background-color: #CFCFCF;
 }
 .awards__slide-img {
     height: 100%;
