--- a/styles/pages/development-center.css
+++ b/styles/pages/development-center.css
@@ -346,6 +346,7 @@
     height: 540px;
     border-radius: 16px;
     overflow: hidden;
+    background-color: #CFCFCF;
 }
 .advantage-item__slide-img {
     width: 100%;
