--- a/styles/pages/painting-education.css
+++ b/styles/pages/painting-education.css
@@ -57,6 +57,9 @@
 .lesson-structure__lesson-stage-info.--textImage_visible .lesson-structure__lesson-stage-mini-img {
     display: block;
 }
+.wrapper.no-images .lesson-structure__lesson-stage-info.--textImage_visible .lesson-structure__lesson-stage-mini-img {
+    display: none;
+}
 .lesson-structure__lesson-stage-number {
     font-size: 32px;
     line-height: 120%;
@@ -80,6 +83,7 @@
     max-width: 408px;
     width: 100%;
     border-radius: 16px;
+    background-color: #CFCFCF;
 }
 .lesson-structure__lesson-stage-img {
     width: 100%;
@@ -274,7 +278,7 @@
     width: 100%;
     overflow: hidden;
     border-radius: 24px;
-    background-color: #F6F6F6;
+    background-color: #CFCFCF;
 }
 .lesson-teacher__slide-img {
     width: 100%;
